--- a/src/components/pages/_landing.scss
+++ b/src/components/pages/_landing.scss
@@ -1,5 +1,13 @@
 @use "../../styles/settings/variables";
 
+.landingContainer {
+  display: flex;
+  flex-direction: column;
+  align-content: space-between;
+  justify-content: space-evenly;
+  height: 100%;
+}
+
 .landing {
   display: flex;
   flex-direction: column;
@@ -22,12 +30,8 @@
     }
   }
   &__access {
-    flex-grow: 1;
-    width: 100vw;
-    margin-top: 1rem;
-    padding: 2em 0;
-    border-top-left-radius: 2rem;
-    border-top-right-radius: 2rem;
+    margin: 0 1em 1em 1em;
+    border-radius: 2rem;
     background-color: variables.$colorWhite;
   }
 }
